--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -1,12 +1,31 @@
-﻿<h1>Add a Job</h1>
+﻿@model TechJobsPersistent.ViewModels.AddJobViewModel;
+
+<h1>Add a Job</h1>
 
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" />
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name" class="form-control" />
         <span></span>
     </div>
+    <div class="form-group">
+        <label asp-for="EmployerId">Employer</label>
+        <select asp-for="EmployerId" asp-items="Model.Employers" class="form-control"></select>
+        <span></span>
+        <p><a asp-controller="Employer" asp-action="Add">Add Employer</a></p>
+    </div>
+    <div class="form-group">
 
+        @foreach (var skill in Model.Skills)
+        {
+
+            <input name="selectedSkills" id="@skill.Name" type="checkbox" value="@skill.Name" />
+            <label for="@skill.Name">@skill.Name</label>
+        }
+        <span></span>
+
+        <p><a asp-controller="Skill" asp-action="Add">Add Skill</a></p>
+    </div>
     <input type="submit" value="Add Job" />
 </form>
 
